# MIBot

./: .gitignore  README.md  pyproject.toml
docs/: design.md  validation_features.md
mi_counsellor/: __init__.py  __main__.py  classifiers.py  cli.py  counsellor.py  domain.py  llm.py  miti.py  prompts.py
tests/: test_classifiers.py  test_cli.py  test_counsellor.py  test_llm.py  test_miti.py
tools/: extract_mi_source_notes.py
